manifests/manifests/api-server/api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/ueckoken/chofu-race-course-api:d4a98ff-1668094529 # {"$imagepolicy": "flux-system:api"}
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: database
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: data-server-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: api
spec:
  ingressClassName: nginx
  rules:
    - host: kraapi.azukibar.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
